objects/CS_Operations__c.object
<CustomObject>
    <fields>
        <fullName>Request_Typ__c</fullName>
        <label>Request Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Report and/or Dashboard Creation/Revision</fullName>
                </value>
                <value>
                    <fullName>SF User Commissioning/Decommissioning</fullName>
                </value>
                <value>
                    <fullName>Service Level Assignment - Under 10 locations</fullName>
                </value>
                <value>
                    <fullName>Service Level Assignment - More than 10 locations</fullName>
                </value>
                <value>
                    <fullName>Bulk Account Assignment/Creation/Update/Decommission</fullName>
                </value>
                <value>
                    <fullName>Bulk Contact Creation/Update/Decommission</fullName>
                </value>
                <value>
                    <fullName>Bulk Opportunity Assignment/Upload/Update/Decommission</fullName>
                </value>
                <value>
                    <fullName>Bulk Case Assignment/Upload/Update/Decommission</fullName>
                </value>
                <value>
                    <fullName>Individual Account Assignment/Creation/Update/Decommission</fullName>
                </value>
                <value>
                    <fullName>Individual Contact Creation/Update/Decommission</fullName>
                </value>
                <value>
                    <fullName>Individual Opportunity Assignment/Upload/Update/Decommission</fullName>
                </value>
                <value>
                    <fullName>Individual Case Assignment/Upload/Update/Decommission</fullName>
                </value>
                <value>
                    <fullName>New SF Process/Workflow</fullName>
                </value>
                <value>
                    <fullName>Revision to Existing SF Process/Workflow</fullName>
                </value>
                <value>
                    <fullName>LiveOps Issue</fullName>
                </value>
                <value>
                    <fullName>Sales Report (outside of SF)</fullName>
                </value>
                <value>
                    <fullName>Client Service Report (outside of SF)</fullName>
                </value>
                <value>
                    <fullName>SF Training/Walkthrough</fullName>
                </value>
                <value>
                    <fullName>SF Improvement Suggestion</fullName>
                </value>
                <value>
                    <fullName>Email Notification Creation/Update</fullName>
                </value>
                <value>
                    <fullName>Email Template Creation/Update</fullName>
                </value>
                <value>
                    <fullName>Block Email/VM to Case Domain or Phone #</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section_That_Needs_To_Be_Updated__c</fullName>
        <label>Section That Needs To Be Updated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Introduction</fullName>
                </value>
                <value>
                    <fullName>Account On-boarding</fullName>
                </value>
                <value>
                    <fullName>Launch Processes</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Appendix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level_Type__c</fullName>
        <label>Proposed IL Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proof of Value</fullName>
                </value>
                <value>
                    <fullName>Service Level A</fullName>
                </value>
                <value>
                    <fullName>Service Level B</fullName>
                </value>
                <value>
                    <fullName>Service Level C</fullName>
                </value>
                <value>
                    <fullName>Service Level D</fullName>
                </value>
                <value>
                    <fullName>Service Level E</fullName>
                </value>
                <value>
                    <fullName>Service Level F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Section__c</fullName>
        <label>Sub-Section</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Section_That_Needs_To_Be_Updated__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Client Service Roles &amp; Vendors</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Packages</fullName>
                </value>
                <value>
                    <fullName>Common Tools</fullName>
                </value>
                <value>
                    <fullName>Sales Process</fullName>
                </value>
                <value>
                    <fullName>How Accounts Move from Sales to Client Services</fullName>
                </value>
                <value>
                    <fullName>Account Creation</fullName>
                </value>
                <value>
                    <fullName>Account Assignment</fullName>
                </value>
                <value>
                    <fullName>Combo Launch Process</fullName>
                </value>
                <value>
                    <fullName>SEM Launch Process</fullName>
                </value>
                <value>
                    <fullName>SEO Launch Process</fullName>
                </value>
                <value>
                    <fullName>Display Launch Process</fullName>
                </value>
                <value>
                    <fullName>MetroPage Launch Process</fullName>
                </value>
                <value>
                    <fullName>National Bulk Launch Process</fullName>
                </value>
                <value>
                    <fullName>Call Management and Using the Desktop Agent</fullName>
                </value>
                <value>
                    <fullName>Touch Plans</fullName>
                </value>
                <value>
                    <fullName>Reactive Communication</fullName>
                </value>
                <value>
                    <fullName>Website Changes</fullName>
                </value>
                <value>
                    <fullName>Optimizations</fullName>
                </value>
                <value>
                    <fullName>Escalations</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Budget Changes</fullName>
                </value>
                <value>
                    <fullName>Client Initiated Cases</fullName>
                </value>
                <value>
                    <fullName>Client Survey Procedure</fullName>
                </value>
                <value>
                    <fullName>Yodle Live Bug Process</fullName>
                </value>
                <value>
                    <fullName>Procedure by Package</fullName>
                </value>
                <value>
                    <fullName>Customer Retention</fullName>
                </value>
                <value>
                    <fullName>Website &amp; Account Teardown Process</fullName>
                </value>
                <value>
                    <fullName>Yodle Dictionary of Common Terms &amp; Acronyms</fullName>
                </value>
                <value>
                    <fullName>Basic HTML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrade_Downgrade__c</fullName>
        <label>Upgrade/Downgrade?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrade_Reason__c</fullName>
        <label>Upgrade Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Upgrade_Downgrade__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Doesn't like current CMS 3.0 site</fullName>
                </value>
                <value>
                    <fullName>Doesn't like current CMS 2.0 site</fullName>
                </value>
                <value>
                    <fullName>Used as soft concession</fullName>
                </value>
                <value>
                    <fullName>Client wants to match website to another account</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upsell_Verified__c</fullName>
        <label>Upsell Verified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <inlineHelpText>If you closed out the request and directed the individual elsewhere, select â€œGave Alternate Guidanceâ€�; if you were fixing an error, choose â€œFixing Errorâ€�; for all other requests, select â€œChange/Projectâ€�.</inlineHelpText>
        <label>Request Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change/Project</fullName>
                </value>
                <value>
                    <fullName>Fixing Error</fullName>
                </value>
                <value>
                    <fullName>Gave Alternate Guidance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Channel_Requested_By__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Assignment Request</fullName>
                </value>
                <value>
                    <fullName>Administrative Items</fullName>
                </value>
                <value>
                    <fullName>Batch Uploads</fullName>
                </value>
                <value>
                    <fullName>Clicktools</fullName>
                </value>
                <value>
                    <fullName>CMS 2 Upgrade Test</fullName>
                </value>
                <value>
                    <fullName>CMS 3.1 Update Request</fullName>
                </value>
                <value>
                    <fullName>CS SOP Manual Update</fullName>
                </value>
                <value>
                    <fullName>Essentials Features Request</fullName>
                </value>
                <value>
                    <fullName>Excel Reports</fullName>
                </value>
                <value>
                    <fullName>Influence - Lead Sourcing</fullName>
                </value>
                <value>
                    <fullName>LiveOps</fullName>
                </value>
                <value>
                    <fullName>LiveOps Issue</fullName>
                </value>
                <value>
                    <fullName>National Project</fullName>
                </value>
                <value>
                    <fullName>New Report Request</fullName>
                </value>
                <value>
                    <fullName>Operations Help Desk</fullName>
                </value>
                <value>
                    <fullName>Operation Upsell Additions</fullName>
                </value>
                <value>
                    <fullName>Project Request</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>SalesForce/Service Cloud Assistance</fullName>
                </value>
                <value>
                    <fullName>Service Level Assignment</fullName>
                </value>
                <value>
                    <fullName>Strategic Account Growth</fullName>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                </value>
                <value>
                    <fullName>Weekly Reports Update</fullName>
                </value>
                <value>
                    <fullName>YO 2.0 Free Time Request</fullName>
                </value>
                <value>
                    <fullName>Salesforce Data Modification</fullName>
                </value>
                <value>
                    <fullName>Yodle Live</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Change_Type__c</fullName>
        <label>Bulk Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add/Remove Products</fullName>
                </value>
                <value>
                    <fullName>Add Negatives</fullName>
                </value>
                <value>
                    <fullName>Adjust Margin</fullName>
                </value>
                <value>
                    <fullName>ASW Completion/Updates</fullName>
                </value>
                <value>
                    <fullName>Bill Date Move</fullName>
                </value>
                <value>
                    <fullName>Budget/Fee Change</fullName>
                </value>
                <value>
                    <fullName>Bulk URL Update</fullName>
                </value>
                <value>
                    <fullName>Call Tracking Adjustments</fullName>
                </value>
                <value>
                    <fullName>Enable/Disable Location Extensions</fullName>
                </value>
                <value>
                    <fullName>External Location ID</fullName>
                </value>
                <value>
                    <fullName>Launch Accounts</fullName>
                </value>
                <value>
                    <fullName>Non-National</fullName>
                </value>
                <value>
                    <fullName>Onboarding - Account Creation</fullName>
                </value>
                <value>
                    <fullName>Onboarding - Complete (Creation, ASW, Domain)</fullName>
                </value>
                <value>
                    <fullName>Pausing Accounts/Metropages</fullName>
                </value>
                <value>
                    <fullName>Payment Method Update</fullName>
                </value>
                <value>
                    <fullName>Refund/Manual Bill</fullName>
                </value>
                <value>
                    <fullName>Review Watch Setup</fullName>
                </value>
                <value>
                    <fullName>Site Links</fullName>
                </value>
                <value>
                    <fullName>Uses Paper Check to No</fullName>
                </value>
                <value>
                    <fullName>Website Implementation Change</fullName>
                </value>
                <value>
                    <fullName>Other/Multiple Changes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <label>Business Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Approval_Status__c</fullName>
        <label>CS Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Approved</fullName>
                </value>
                <value>
                    <fullName>Request Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date (1 Business Day Min)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_Required_to_Complete__c</fullName>
        <inlineHelpText>Include the estimated time required to complete the project here. Please specify whether it is days or hours.</inlineHelpText>
        <label>Estimated Time Required to Complete</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructions_to_Complete_Project__c</fullName>
        <label>Instructions to Complete Project</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Macro_Used__c</fullName>
        <label>Macro Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Approved_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Approved Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minutes_to_Complete_Request__c</fullName>
        <inlineHelpText>Put in the total minutes it took to complete the task. Donâ€™t worry about if this number is large or small â€“ no one is judging. We want it to reflect the amount of work we are putting into these requests, so be honest here.</inlineHelpText>
        <label>Minutes to Complete Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Need_to_Escalate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need to Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operations_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CS_Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operations_Summary__c</fullName>
        <label>Operations Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blocker</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>4 - Low</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                </value>
                <value>
                    <fullName>1 - Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Details__c</fullName>
        <label>Request Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Director Assignment/Update</fullName>
                </value>
                <value>
                    <fullName>Add/Remove Agent to Recurring Report</fullName>
                </value>
                <value>
                    <fullName>Add/Remove Individual</fullName>
                </value>
                <value>
                    <fullName>Add New Account</fullName>
                </value>
                <value>
                    <fullName>Batch Cases</fullName>
                </value>
                <value>
                    <fullName>Batch Case Upload</fullName>
                </value>
                <value>
                    <fullName>Batch Close Cases</fullName>
                </value>
                <value>
                    <fullName>Batch Optimization Upload</fullName>
                </value>
                <value>
                    <fullName>Block Email/VM to Case Domain or Phone #</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Change/Update User Permissions</fullName>
                </value>
                <value>
                    <fullName>Change Agent Priority</fullName>
                </value>
                <value>
                    <fullName>Change Role/Manager for User</fullName>
                </value>
                <value>
                    <fullName>Change Routing</fullName>
                </value>
                <value>
                    <fullName>Change to Existing Queue</fullName>
                </value>
                <value>
                    <fullName>Client Contact Preference Updates</fullName>
                </value>
                <value>
                    <fullName>Client Opting Out</fullName>
                </value>
                <value>
                    <fullName>Client Questions</fullName>
                </value>
                <value>
                    <fullName>CMS 2 Upsell - Add Features</fullName>
                </value>
                <value>
                    <fullName>CMS 3.1 Update Request</fullName>
                </value>
                <value>
                    <fullName>Corporate Account Creation</fullName>
                </value>
                <value>
                    <fullName>Corporate acct - add/remove ILs</fullName>
                </value>
                <value>
                    <fullName>Create New Survey</fullName>
                </value>
                <value>
                    <fullName>CS Nomination</fullName>
                </value>
                <value>
                    <fullName>CS Social Update Request</fullName>
                </value>
                <value>
                    <fullName>CS SOP Manual Update</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Deactivate SalesForce User</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Edit Dashboard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Awaiting Internal Response</fullName>
                </value>
                <value>
                    <fullName>Long Term Project/Plan</fullName>
                </value>
                <value>
                    <fullName>Pending approval from YBN Leadership</fullName>
                </value>
                <value>
                    <fullName>Pending Estimate</fullName>
                </value>
                <value>
                    <fullName>Pending Channel Lead</fullName>
                </value>
                <value>
                    <fullName>Pending JIRA Ticket Resolution</fullName>
                </value>
                <value>
                    <fullName>Pending Ops Assignment</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Need More Information</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed - Added</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Closed - Completed/Updates Made</fullName>
                </value>
                <value>
                    <fullName>Closed - Completed</fullName>
                </value>
                <value>
                    <fullName>Closed - Could Not Complete</fullName>
                </value>
                <value>
                    <fullName>Closed - Review for CS Ops Plan</fullName>
                </value>
                <value>
                    <fullName>Closed - Declined by Channel Lead</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Approved</fullName>
                </value>
                <value>
                    <fullName>Closed: CMS 2.0 â€“ Too Customized</fullName>
                </value>
                <value>
                    <fullName>Closed: Segment Not Supported</fullName>
                </value>
                <value>
                    <fullName>Closed: Upgraded</fullName>
                </value>
                <value>
                    <fullName>Closed: Downgraded</fullName>
                </value>
                <value>
                    <fullName>Project - In Progress</fullName>
                </value>
                <value>
                    <fullName>Project - Pending WBN Ops Assignment</fullName>
                </value>
                <value>
                    <fullName>On Hold - Per Requester</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Object used to make request to the CS &amp; YBN Operations teams</description>
    <label>Operations</label>
    <nameField>
        <displayFormat>Ops-{0000}</displayFormat>
        <label>Operations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Operations_Owner__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Upsell_Additions</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Request_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CS_Operations__c.Operation_Upsell_Additions</value>
        </filters>
        <filters>
            <field>Channel_Requested_By__c</field>
            <operation>notEqual</operation>
            <value>Partner</value>
        </filters>
        <label>All Upsell Additions</label>
    </listViews>
    <listViews>
        <fullName>CS_Operations</fullName>
        <columns>NAME</columns>
        <columns>Manager_Approved_Escalation__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>JIRA_Issue_ID__c</columns>
        <columns>Desired_Completion_Date__c</columns>
        <columns>Expected_Completion_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Operations_Owner__c</columns>
        <columns>Request_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>CS_Operations__c.Upsell_Tracking,CS_Operations__c.Operation_Upsell_Additions,CS_Operations__c.YO_2_0_Free_Time_Request</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>CS_Operations__c.Strategic_Account_Growth_Addition,CS_Operations__c.National_Project_Request</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>CS_Operations__c.YBN_Operations_Request,CS_Operations__c.CS_Nomination_Form</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Long Term Project/Plan</value>
        </filters>
        <label>CS Operations</label>
    </listViews>
    <listViews>
        <fullName>CS_Operations_Essentials</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Manager_Approved_Escalation__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Desired_Completion_Date__c</columns>
        <columns>Expected_Completion_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Operations_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>CS_Operations__c.Upsell_Tracking,CS_Operations__c.Operation_Upsell_Additions,CS_Operations__c.YO_2_0_Free_Time_Request</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>CS_Operations__c.Strategic_Account_Growth_Addition,CS_Operations__c.National_Project_Request</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>CS_Operations__c.YBN_Operations_Request,CS_Operations__c.CS_Nomination_Form</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Long Term Project/Plan</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Essentials Features Request,CMS 3.1 Update Request</value>
        </filters>
        <label>CS Operations - Essentials Requests</label>
    </listViews>
    <listViews>
        <fullName>CS_Operations_Inline_Edit_Essentials_F</fullName>
        <columns>NAME</columns>
        <columns>Manager_Approved_Escalation__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Desired_Completion_Date__c</columns>
        <columns>Expected_Completion_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Operations_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CS_Operations__c.Essentials_Features_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Long Term Project/Plan</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
        </filters>
        <label>CS Operations - Inline Edit Essentials F</label>
    </listViews>
</CustomObject>